# ros2_agent_skill_platform

./: .gitignore  LICENSE  README.md
.github/workflows/: ros2-jazzy-ci.yml
artifacts/check_robot_health/: 0.2.0.json
artifacts/navigate_to_approved_pose/: 0.1.0.json
artifacts/observe_and_avoid_water_risk/: 0.1.0.json
artifacts/preview_safe_route/: 0.1.0.json
artifacts/query_semantic_target/: 0.1.0.json
artifacts/return_home_safely/: 0.1.0.json
deploy/: README.md  project2.env.example
docs/: approved_navigation_skill.md  architecture.md  current_progress.md  diagnosis_agent.md  diagnosis_mcp.md  experiment_diagnosis.md  final_evaluation_and_deployment.md  final_retrospective.md  governed_skill_author.md  llm_gateway.md  mimo_prompt_evaluation_v1.md  project1_composite_skills.md  project_plan.md  read_only_agent_loop.md  registry_state_machine.md  release_signing.md  robot_health_skill.md  route_preview_skill.md  semantic_query_skill.md  skill_contract.md  skill_runtime.md  versioned_rag.md
evaluations/: diagnosis_agent_v1.json  skill_author_v1.json  system_safety_v1.json
evidence/agent_loop/: README.md  live_read_only_route_v1.json
evidence/check_robot_health/: README.md  governed_release_v1.json  rbot_live_simulation_v1.json
evidence/diagnosis_agent/: README.md  live_mimo_mcp_bge_v1.json
evidence/final_evaluation/: README.md  reproducible_policy_v1.json
evidence/llm_gateway/: README.md  mimo_plan_only_smoke_v1.json  mimo_prompt_evaluation_v1.json  (+1 more)
examples/: check_robot_health_invocation_v1.json  mimo_plan_request_v1.json  navigate_to_approved_pose_invocation_v1.json
schemas/: agent_loop_result.schema.json  agent_plan.schema.json  agent_run_state.schema.json  agent_trace_event.schema.json  composite_skill_result.schema.json  diagnosis_agent_plan.schema.json  diagnosis_agent_result.schema.json  diagnosis_report_bundle.schema.json  execution_approval.schema.json  experiment_analysis.schema.json  experiment_run.schema.json  final_evaluation_summary.schema.json  llm_gateway_result.schema.json  llm_plan_request.schema.json  mcp_tool_result.schema.json  prompt_definition.schema.json  prompt_evaluation_manifest.schema.json  prompt_evaluation_summary.schema.json  rag_ab_evaluation_summary.schema.json  rag_embedding_profile.schema.json  rag_evaluation_manifest.schema.json  rag_evaluation_summary.schema.json  rag_index.schema.json  rag_retrieval_result.schema.json  rag_source_manifest.schema.json  registry_skill_record.schema.json  robot_health_result.schema.json  skill.schema.json  skill_artifact_lock.schema.json  skill_author_evaluation_summary.schema.json  skill_author_plan.schema.json  skill_author_request.schema.json  skill_author_result.schema.json  skill_execution_result.schema.json  skill_invocation.schema.json  skill_signature_envelope.schema.json
scripts/: final_verify.sh
src/robot_agent_orchestrator/: package.xml  setup.cfg  setup.py
src/robot_agent_orchestrator/robot_agent_orchestrator/: __init__.py  cli.py  loop.py
src/robot_agent_orchestrator/test/: test_loop.py  test_pep257.py
src/robot_controlled_navigation_skills/: package.xml  setup.cfg  setup.py
src/robot_controlled_navigation_skills/robot_controlled_navigation_skills/: __init__.py  cancel_ros.py  navigation.py  navigation_ros.py
src/robot_controlled_navigation_skills/test/: test_flake8.py  test_navigation.py  test_navigation_schema.py  test_pep257.py
src/robot_diagnosis_mcp/: package.xml  setup.cfg  setup.py
src/robot_diagnosis_mcp/robot_diagnosis_mcp/: __init__.py  protocol_smoke.py  server.py  server_cli.py  tools.py
src/robot_diagnosis_mcp/test/: test_flake8.py  test_tools.py
src/robot_llm_gateway/: package.xml  setup.cfg  setup.py
src/robot_llm_gateway/robot_llm_gateway/: __init__.py  cli.py  contracts.py  evaluate_cli.py  evaluation.py  gateway.py  prompt_registry.py  providers.py
src/robot_llm_gateway/test/: test_cli.py  test_contracts.py  test_evaluation.py  test_gateway.py  test_pep257.py  test_prompt_registry.py  test_providers.py
src/robot_rag/: package.xml  setup.cfg  setup.py
src/robot_rag/robot_rag/: __init__.py  ab_evaluate_cli.py  ab_evaluation.py  build_cli.py  chunking.py  corpus.py  embedding.py  evaluate_cli.py  evaluation.py  paths.py  query_cli.py  retrieval.py  util.py
src/robot_rag/test/: test_rag.py
src/robot_semantic_skills/: package.xml  setup.cfg  setup.py
src/robot_semantic_skills/robot_semantic_skills/: __init__.py  query.py  query_cli.py
src/robot_semantic_skills/test/: test_query.py  test_result_schema.py
src/robot_skill_author/: package.xml  setup.cfg  setup.py
src/robot_skill_author/robot_skill_author/: __init__.py  approve_cli.py  cli.py  contracts.py  evaluate_cli.py  evaluation.py  generator.py  pipeline.py  render.py  retriever.py  sandbox.py
src/robot_skill_author/test/: __init__.py  test_contracts.py  test_pipeline.py
src/robot_skill_registry/: package.xml  setup.cfg  setup.py
src/robot_skill_registry/resource/: robot_skill_registry
src/robot_skill_registry/robot_skill_registry/: __init__.py  registry.py  registry_cli.py  release_cli.py  release_crypto.py
src/robot_skill_registry/test/: test_agent_state.py  test_execution_approval.py  test_flake8.py  test_pep257.py  test_registry.py  test_release_crypto.py
src/robot_skill_runtime/: package.xml  setup.cfg  setup.py
src/robot_skill_runtime/robot_skill_runtime/: __init__.py  adapters.py  artifacts.py  executor.py  executor_cli.py  trace.py
src/robot_skill_runtime/test/: test_artifacts.py  test_executor.py  test_flake8.py  test_navigation_adapter.py  test_navigation_executor.py  test_preview_adapter.py  test_preview_executor.py  test_semantic_adapter.py  test_semantic_executor.py
src/safe_agent_core/: package.xml  setup.cfg  setup.py
src/safe_agent_core/safe_agent_core/: __init__.py  experiment_analytics.py  experiment_analyze.py  health.py  health_ros.py  skill_contract.py  skill_validate.py
src/safe_agent_core/test/: test_experiment_analytics.py  test_flake8.py  test_health.py  test_health_ros.py  test_schema.py  test_skill_contract.py
(+112 files in other folders)
