<?xml version="1.0"?>
<package format="3">
  <name>robot_agent_orchestrator</name>
  <version>0.1.0</version>
  <description>Bounded read-only Agent Loop over the MiMo gateway and governed Skill Runtime.</description>
  <maintainer email="maintainer@example.com">rrrrwewwew-cmd</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-jsonschema</exec_depend>
  <exec_depend>robot_llm_gateway</exec_depend>
  <exec_depend>robot_skill_registry</exec_depend>
  <exec_depend>robot_skill_runtime</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-yaml</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
