<?xml version="1.0"?>
<package format="3">
  <name>robot_llm_gateway</name>
  <version>0.1.0</version>
  <description>Plan-only Xiaomi MiMo gateway and immutable Prompt Registry for the governed robot Agent.</description>
  <maintainer email="maintainer@example.com">rrrrwewwew-cmd</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-jsonschema</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
