<?xml version="1.0"?>
<package format="3">
  <name>robot_rag</name>
  <version>0.2.0</version>
  <description>Versioned hybrid RAG with learned multilingual embeddings, abstention and reproducible A/B evaluation.</description>
  <maintainer email="maintainer@example.com">rrrrwewwew-cmd</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-jsonschema</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
