<?xml version="1.0"?>
<package format="3">
  <name>robot_semantic_skills</name>
  <version>0.1.0</version>
  <description>Deterministic read-only semantic map Skills for the governed Agent runtime.</description>
  <maintainer email="maintainer@example.com">rrrrwewwew-cmd</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-jsonschema</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
