<?xml version="1.0"?>
<package format="3">
  <name>robot_skill_runtime</name>
  <version>0.5.0</version>
  <description>Registry-gated executor and approved adapters for robot Skills.</description>
  <maintainer email="maintainer@example.com">rrrrwewwew-cmd</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-jsonschema</exec_depend>
  <exec_depend>robot_controlled_navigation_skills</exec_depend>
  <exec_depend>robot_navigation_skills</exec_depend>
  <exec_depend>robot_skill_registry</exec_depend>
  <exec_depend>robot_composite_skills</exec_depend>
  <exec_depend>robot_semantic_skills</exec_depend>
  <exec_depend>safe_agent_core</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-yaml</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
